# COSC3000-CG-MinecraftTerrain

./: .gitignore  CMakeLists.txt
include/: camera.h  perlin_noise.h  shader.h
include/glad/: glad.h
lib/glad/: glad.c
shaders/: fragment_shader.fs  simple_depth_shader.fs  simple_depth_shader.vs
src/: main.cpp  shader.cpp
